--- a/index.html
+++ b/index.html
@@ -73,18 +73,19 @@
 
       <div id="logo" class="pull-left">
         <!-- Uncomment below if you prefer to use a text logo -->
-        <!-- <h1><a href="#intro">MIT <span>Vaccines</span></a></h1> -->
-        <a href="index.html" class="scrollto"><img src="assets/img/auto_id_tpt_new_america.png" alt="" title=""></a>
+        <!-- <h1><a href="#intro"><span></span></a></h1> -->
+        <a href="index.html" class="scrollto"><img src="assets/img/nsf.png" alt="NSF" title=""></a>
       </div>
 
       <nav id="nav-menu-container">
         <ul class="nav-menu">
           <li class="menu-active"><a href="index.html">Home</a></li>
-          <li><a href="#leadership">Leadership</a></li>
-          <li><a href="#speakers">Vaccines for All Conferences</a></li>
-          <li><a href="#recent-work">Recent Work</a></li>
-          <li><a href="#about">About Us</a></li>
-          <li class="buy-tickets"><a href="slack.html">Slack</a></li>
+          <li><a href="#overview">Overview</a></li>
+          <li><a href="#background">Background</a></li>
+          <li><a href="#data-sharing">Data Sharing</a></li>
+          <li><a href="#privacy-technology">Privacy Technology</a></li>
+          <li><a href="#speakers">Speakers</a></li>
+          <li class="buy-tickets"><a href="#agenda">Agenda</a></li>
         </ul>
       </nav><!-- #nav-menu-container -->
     </div>
@@ -114,7 +115,7 @@
   </section><!-- End Intro Section -->
   <main id="main">
     <section id="coordination" class="section-with-bg">
-      <div class="container">
+      <div class="container" id="overview">
         <div class="section-header-inv">
           <h2 style="font-size:xx-large">Overview</h2>
         </div>
@@ -155,7 +156,7 @@
     </section>
 
     <section id="coordination" style="background-color: #f4f7ff;">
-      <div class="container">
+      <div class="container" id="background">
         <div class="section-header">
           <h2 style="color: #191919; font-size:xx-large">Background</h2>
         </div>
@@ -189,7 +190,7 @@
     </section>
 
     <section id="coordination" class="section-with-bg">
-      <div class="container">
+      <div class="container" id="data-sharing">
         <div class="section-header-inv">
           <h2 style="font-size:xx-large">Data Sharing</h2>
         </div>
@@ -213,7 +214,7 @@
     <!-- Protocols, App Design, and Papers -->
 
     <section id="coordination" style="background-color: #f4f7ff;">
-      <div class="container">
+      <div class="container" id="privacy-technology">
         <div class="section-header">
           <h2 style="color: #191919; font-size:xx-large">Privacy Technology</h2>
         </div>
@@ -248,10 +249,6 @@
 
     <section id="coordination" class="section-with-bg">
       <div class="container">
-        <div class="section-header-inv">
-          <h2 style="font-size:xx-large">Workshop Organization</h2>
-        </div>
-
         <div class="tab-content row justify-content-center" data-aos-delay="700">
           <p style="color: white">
             We propose a two-day workshop with 40-50 invited participants, primarily drawn from federal
@@ -272,25 +269,10 @@
       <section id="speakers" class="section-with-bg">
         <div class="container">
           <div class="section-header">
-            <h2 style="color: #191919">Vaccines for All Conferences</h2>
+            <h2 style="color: #191919">Speakers</h2>
             <!-- <p style="color:black">December 11, 2020</p> -->
             <!-- <p>All times are listed in Eastern Standard Time (EST)</p> -->
           </div>
-          <div class="row justify-content-center" style="padding-bottom: 50px;">
-            <a href="assets/files/PositionPaper.pdf" id="about-btn">&nbsp;&nbsp;Position Paper&nbsp;&nbsp;</a>
-            <a href="https://www.youtube.com/user/mitmedialab" id="about-btn">&nbsp;&nbsp;Video&nbsp;&nbsp;</a>
-          </div>
-          <div class="tab-content row justify-content-center">
-            <p>Disparities in equitable distribution, vaccine efficacy, duration of immunity, multi-dose adherence, and
-              privacy-focused user experience are among the most critical difficulties that must be addressed. The
-              biggest hurdles in designing digital solutions which engage citizens in this pandemic are human and
-              societal as well as technological. Trust at all levels and among all participants is mandatory for
-              success. Can <b>participatory real time epidemiology</b> and <b>user-centric crowd-sourced solutions</b>
-              help? The deployment of exposure notification/health passport apps is a promising start.</p>
-            <br>
-            <p>The conference brought together experts and stakeholders to address the consequences impacting
-              disease-spread, individual behaviour, society, the economy, and data privacy. <br><br><br></p>
-
             <div class="row justify-content-center speaker-row">
               <div class="col-lg-3 col-md-6 col-sm-6" style="width: 85%">
                 <a href="https://www.nsf.gov/cise/bios/egiancha.jsp">
@@ -454,6 +436,8 @@
                 Erwin Gianchandani, National Science Foundation<br>
                 Lynne Parker, White House Office of Science and Technology Policy</p>
             </div>
+          </div>
+          <div class="row agenda-item">
             <div class="col-md-3">11:30am - 1:00pm</div>
             <!-- <div class="col-md-2"><a href="https://youtu.be/OrVd8Z_P2So" class="about-btn">&nbsp;Watch&nbsp;</a></div> -->
             <div class="col-md-9">
@@ -461,9 +445,196 @@
               <p></p>
             </div>
           </div>
+          <div class="row agenda-item">
+            <div class="col-md-3"></div>
+            <!-- <div class="col-md-2"><a href="https://youtu.be/OrVd8Z_P2So" class="about-btn">&nbsp;Watch&nbsp;</a></div> -->
+            <div class="col-md-9">
+              <h4>	
+                Keynote: Confidentiality-Utility Tradeoffs and Stakeholder Communication</h4>
+              <p>John Abowd, U.S. Census Bureau</p>
+            </div>
+          </div>
+          <div class="row agenda-item">
+            <div class="col-md-3"></div>
+            <!-- <div class="col-md-2"><a href="https://youtu.be/OrVd8Z_P2So" class="about-btn">&nbsp;Watch&nbsp;</a></div> -->
+            <div class="col-md-9">
+              <h4>	
+                Differential Privacy in Practice</h4>
+              <p>Ashwin Machanavajjhala, Duke University</p>
+            </div>
+          </div>
+          <div class="row agenda-item">
+            <div class="col-md-3"></div>
+            <!-- <div class="col-md-2"><a href="https://youtu.be/OrVd8Z_P2So" class="about-btn">&nbsp;Watch&nbsp;</a></div> -->
+            <div class="col-md-9">
+              <h4>Risk Management</h4>
+              <p>John Eltinge, U.S. Census Bureau</p>
+            </div>
+          </div>
+          <div class="row agenda-item">
+            <div class="col-md-3">1:00 - 1:45</div>
+            <!-- <div class="col-md-2"><a href="https://youtu.be/OrVd8Z_P2So" class="about-btn">&nbsp;Watch&nbsp;</a></div> -->
+            <div class="col-md-9">
+              <h4>Break</h4>
+              <p></p>
+            </div>
+          </div>
+          <div class="row agenda-item">
+            <div class="col-md-3">1:45 - 2:15</div>
+            <!-- <div class="col-md-2"><a href="https://youtu.be/OrVd8Z_P2So" class="about-btn">&nbsp;Watch&nbsp;</a></div> -->
+            <div class="col-md-9">
+              <h4>The Perspective of the Chief Data Officer</h4>
+              <p>Dan Morgan, Department of Transportation</p>
+            </div>
+          </div>
+          <div class="row agenda-item">
+            <div class="col-md-3">1:45 - 2:15</div>
+            <!-- <div class="col-md-2"><a href="https://youtu.be/OrVd8Z_P2So" class="about-btn">&nbsp;Watch&nbsp;</a></div> -->
+            <div class="col-md-9">
+              <h4>COVID-19 Case Data Publication</h4>
+              <p>	
+                Brian Lee, U.S., Centers for Disease Control and Prevention</p>
+            </div>
+          </div>
+          <div class="row agenda-item">
+            <div class="col-md-3">2:45 - 3:15</div>
+            <!-- <div class="col-md-2"><a href="https://youtu.be/OrVd8Z_P2So" class="about-btn">&nbsp;Watch&nbsp;</a></div> -->
+            <div class="col-md-9">
+              <h4>Synthetic Data Generation</h4>
+              <p>Jerry Reiter, Duke University</p>
+            </div>
+          </div>
+          <div class="row agenda-item">
+            <div class="col-md-3">3:15 - 3:30</div>
+            <!-- <div class="col-md-2"><a href="https://youtu.be/OrVd8Z_P2So" class="about-btn">&nbsp;Watch&nbsp;</a></div> -->
+            <div class="col-md-9">
+              <h4>Break</h4>
+              <p></p>
+            </div>
+          </div>
+          <div class="row agenda-item">
+            <div class="col-md-3">3:30 - 4:30</div>
+            <!-- <div class="col-md-2"><a href="https://youtu.be/OrVd8Z_P2So" class="about-btn">&nbsp;Watch&nbsp;</a></div> -->
+            <div class="col-md-9">
+              <h4>Secure Multiparty Computation in the Boston Women's Workforce Network</h4>
+              <p>Mayank Varia, Boston University</p>
+            </div>
+          </div>
+          <div class="row agenda-item">
+            <div class="col-md-3"></div>
+            <!-- <div class="col-md-2"><a href="https://youtu.be/OrVd8Z_P2So" class="about-btn">&nbsp;Watch&nbsp;</a></div> -->
+            <div class="col-md-9">
+              <h4>Multi-tier Access and Data User Needs</h4>
+              <p>
+
+                Barbara Downs, U.S. Census Bureau</p>
+            </div>
+          </div>
+          <div class="row agenda-item">
+            <div class="col-md-3"></div>
+            <!-- <div class="col-md-2"><a href="https://youtu.be/OrVd8Z_P2So" class="about-btn">&nbsp;Watch&nbsp;</a></div> -->
+            <div class="col-md-9">
+              <h4>	
+                Adversarial Modeling</h4>
+              <p>	
+                Bradley Malin, Vanderbilt University</p>
+            </div>
+          </div>
+          <div class="row agenda-item">
+            <div class="col-md-3">4:30 - 5:00</div>
+            <!-- <div class="col-md-2"><a href="https://youtu.be/OrVd8Z_P2So" class="about-btn">&nbsp;Watch&nbsp;</a></div> -->
+            <div class="col-md-9">
+              <h4>	
+                The NIST Perspective</h4>
+              <p>	
+                To be determined</p>
+            </div>
+          </div>
         </div>
-        <!-- End Schdule Day 1 -->
       </div>
+      
+        <!-- End Schdule Day 2 -->
+        <center>
+          <h5 id="dec-conf" style="font-weight: 800; font-family: Arial, Helvetica, sans-serif; color:#2b2b2b">May 22, 2021</h5>
+        </center>
+        <div class="tab-content row justify-content-center">
+          <!-- Schdule Day 2  -->
+          <div role="tabpanel" class="col-lg-9 tab-pane show active" id="day-1">
+            <div class="row agenda-item">
+              <div class="col-md-3">11:00am - 11:30am</div>
+              <!-- <div class="col-md-2"><a href="https://youtu.be/OrVd8Z_P2So" class="about-btn">&nbsp;Watch&nbsp;</a></div> -->
+              <div class="col-md-9">
+                <h4>Opening Remarks</h4>
+                <p>	
+                  Elham Tabassi & the Organizers</p>
+              </div>
+            </div>
+            <div class="row agenda-item">
+              <div class="col-md-3">11:30am - 1:00pm</div>
+              <!-- <div class="col-md-2"><a href="https://youtu.be/OrVd8Z_P2So" class="about-btn">&nbsp;Watch&nbsp;</a></div> -->
+              <div class="col-md-9">
+                <h4>Breakout / Working Session 1</h4>
+                <p></p>
+              </div>
+            </div>
+            <div class="row agenda-item">
+              <div class="col-md-3">1:00 - 1:45</div>
+              <!-- <div class="col-md-2"><a href="https://youtu.be/OrVd8Z_P2So" class="about-btn">&nbsp;Watch&nbsp;</a></div> -->
+              <div class="col-md-9">
+                <h4>Break</h4>
+                <p></p>
+              </div>
+            </div>
+            <div class="row agenda-item">
+              <div class="col-md-3">1:45 - 2:15</div>
+              <!-- <div class="col-md-2"><a href="https://youtu.be/OrVd8Z_P2So" class="about-btn">&nbsp;Watch&nbsp;</a></div> -->
+              <div class="col-md-9">
+                <h4>	
+                  Breakout Status Reports</h4>
+                <p></p>
+              </div>
+            </div>
+            <div class="row agenda-item">
+              <div class="col-md-3">2:15 - 3:00</div>
+              <!-- <div class="col-md-2"><a href="https://youtu.be/OrVd8Z_P2So" class="about-btn">&nbsp;Watch&nbsp;</a></div> -->
+              <div class="col-md-9">
+                <h4>Panel on Government - Academia Interaction?
+                </h4>
+                <p></p>
+              </div>
+            </div>
+            <div class="row agenda-item">
+              <div class="col-md-3">3:00 - 3:15</div>
+              <!-- <div class="col-md-2"><a href="https://youtu.be/OrVd8Z_P2So" class="about-btn">&nbsp;Watch&nbsp;</a></div> -->
+              <div class="col-md-9">
+                <h4>Break
+                </h4>
+                <p></p>
+              </div>
+            </div>
+            <div class="row agenda-item">
+              <div class="col-md-3">3:15 - 4:30</div>
+              <!-- <div class="col-md-2"><a href="https://youtu.be/OrVd8Z_P2So" class="about-btn">&nbsp;Watch&nbsp;</a></div> -->
+              <div class="col-md-9">
+                <h4>	
+                  Breakout / Working Session 2
+                </h4>
+                <p></p>
+              </div>
+            </div>
+            <div class="row agenda-item">
+              <div class="col-md-3">4:30 - 5:00</div>
+              <!-- <div class="col-md-2"><a href="https://youtu.be/OrVd8Z_P2So" class="about-btn">&nbsp;Watch&nbsp;</a></div> -->
+              <div class="col-md-9">
+                <h4>	
+                    
+  Breakout Summaries
+                </h4>
+                <p></p>
+              </div>
+            </div>
+          </div>
+          <!-- End Schdule Day 2 -->  
     </div>
   </section>
 
@@ -476,8 +647,6 @@
     <div class="container">
 
       <div class="copyright">
-        Director of Trusted Pandemic Technologies: <a href="https://en.wikipedia.org/wiki/Ramesh_Raskar"
-          style="color: white; text-decoration: underline;">Ramesh Raskar</a><br>
         Contact: <a href="mailto:privatekit@media.mit.edu"
           style="color: white; text-decoration: underline;">privatekit@media.mit.edu</a><br><br>
         &copy; Copyright <strong>Trusted Pandemic Technologies</strong>. All Rights Reserved.
