--- a/index.html
+++ b/index.html
@@ -101,8 +101,7 @@
   <!-- ======= Intro Section ======= -->
   <section id="intro">
     <div class="intro-container" data-aos-delay="100">
-      <h1 class="mb-2 pb-0"><span style="color: #A31F34">Collaborative Research</span></h1>
-      <p id="sub-heading" class="mb-4 pb-0">Workshop to Develop a Roadmap for Greater Public
+      <p id="sub-heading" class="mb-4 pb-0">A Workshop to Develop a Roadmap for Greater Public <br>
         Use of Privacy-Sensitive Government Data</p>
       <!-- <div>
         <a href="https://github.com/Path-Check/vaccine-diary" class="about-btn-2 scrollto">Research</a>
@@ -269,9 +268,56 @@
       <section id="speakers" class="section-with-bg">
         <div class="container">
           <div class="section-header">
+            <h2 style="color: #191919">Coorganizers</h2>
+          </div>
+          <div class="row justify-content-center speaker-row">
+            <div class="col-lg-3 col-md-6 col-sm-6" style="width: 85%">
+              <a href="https://www.cs.purdue.edu/homes/clifton/">
+                <div class="speaker2">
+                  <img src="assets/img/speakers/chris_clifton.jpg" alt="Chris Clifton" style="width: 100%;">
+                  <div class="details">
+                    <h3>Chris Clifton</h3>
+                    <p>Purdue University</p>
+                  </div>
+                </div>
+              </a>
+            </div>
+            <div class="col-lg-3 col-md-6 col-sm-6" style="width:85%">
+              <a href="https://www.vumc.org/dbmi/person/bradley-malin-phd-facmi-faimbe-fiahsi">
+                <div class="speaker">
+                  <img src="assets/img/speakers/bradley_malin.jfif" alt="Bradley Malin" style="width: 100%;">
+                  <div class="details">
+                    <h3>Bradley Malin</h3>
+                    <p>Vanderbilt University</p>
+                  </div>
+                </div>
+              </a>
+            </div>
+            <div class="col-lg-3 col-md-6 col-sm-6" style="width:85%">
+              <a href="https://www.niss.org/people/anna-oganyan">
+                <div class="speaker">
+                  <img src="assets/img/speakers/anna_oganyan.jpg" alt="Anna Oganyan" style="width: 100%;">
+                  <div class="details">
+                    <h3>Anna Oganyan</h3>
+                    <p>National Center for Health Statistics, CDC</p>
+                  </div>
+                </div>
+              </a>
+            </div>
+            <div class="col-lg-3 col-md-6 col-sm-6" style="width:85%">
+              <a href="https://en.wikipedia.org/wiki/Ramesh_Raskar">
+                <div class="speaker">
+                  <img src="assets/img/speakers/ramesh.png" alt="Ramesh Raskar" style="width: 100%;">
+                  <div class="details">
+                    <h3>Ramesh Raskar</h3>
+                    <p>MIT Media Lab</p>
+                  </div>
+                </div>
+              </a>
+            </div>
+          </div>
+          <div class="section-header">
             <h2 style="color: #191919">Speakers</h2>
-            <!-- <p style="color:black">December 11, 2020</p> -->
-            <!-- <p>All times are listed in Eastern Standard Time (EST)</p> -->
           </div>
             <div class="row justify-content-center speaker-row">
               <div class="col-lg-3 col-md-6 col-sm-6" style="width: 85%">
@@ -649,6 +695,8 @@
       <div class="copyright">
         Contact: <a href="mailto:privatekit@media.mit.edu"
           style="color: white; text-decoration: underline;">privatekit@media.mit.edu</a><br><br>
+        <strong>This event was supported by the National Science Foundation</strong>
+      <br><br>
         &copy; Copyright <strong>Trusted Pandemic Technologies</strong>. All Rights Reserved.
       </div>
       <div class="credits">
