remove propose section

--- a/index.html
+++ b/index.html
@@ -246,29 +246,13 @@
       </div>
     </section>
 
-    <section id="coordination" class="section-with-bg">
-      <div class="container">
-        <div class="tab-content row justify-content-center" data-aos-delay="700">
-          <p style="color: white">
-            We propose a two-day workshop with 40-50 invited participants, primarily drawn from federal
-            government agencies. The workshop will also include academics with expertise in a variety of policy
-            and technology areas, with an emphasis on those who have demonstrated success in achieving novel
-            data sharing approaches. The first day will focus on use cases, both successful and unsuccessful, to
-            illustrate both some of the challenges and research ideas that can address those challenges; details
-            in section 2.3.1. The second day will start with breakout group brainstorming sessions to identify
-            specific challenges and promising directions to address those challenges. This will be followed by a
-            report-back and full group discussion
-          </p>
-        </div>
-      </div>
-    </section>
 
     <div id="vaccines-for-all">
       <!-- ======= agenda Section =======  -->
       <section id="speakers" class="section-with-bg">
         <div class="container">
           <div class="section-header">
-            <h2 style="color: #191919">Coorganizers</h2>
+            <h2 style="color: #191919">Organizers</h2>
           </div>
           <div class="row justify-content-center speaker-row">
             <div class="col-lg-3 col-md-6 col-sm-6" style="width: 85%">
@@ -695,9 +679,9 @@
       <div class="copyright">
         Contact: <a href="mailto:privatekit@media.mit.edu"
           style="color: white; text-decoration: underline;">privatekit@media.mit.edu</a><br><br>
-        <strong>This event was supported by the National Science Foundation</strong>
       <br><br>
-        &copy; Copyright <strong>Trusted Pandemic Technologies</strong>. All Rights Reserved.
+      <strong>This event is supported by the National Science Foundation</strong>
+        <!-- &copy; Copyright <strong>Trusted Pandemic Technologies</strong>. All Rights Reserved. -->
       </div>
       <div class="credits">
         <!--
