--- a/index.html
+++ b/index.html
@@ -5,13 +5,13 @@
   <meta charset="utf-8">
   <meta content="width=device-width, initial-scale=1.0" name="viewport">
 
-  <title>Collaborative Research: Workshop to Develop a Roadmap for Greater Public Use of Privacy-Sensitive Government Datas @ MIT</title>
+  <title>Joint NSF-NIST Workshop: To Develop a Roadmap for Greater Public Use of Privacy-Sensitive Government Data</title>
     <meta content="" name="descriptison">
     <meta content="" name="keywords">
 
     <!-- Favicons -->
-    <link href="assets/favicon.ico" rel="icon">
-    <link href="assets/img/apple-touch-icon.png" rel="apple-touch-icon">
+    <link rel="icon" type="image/png" sizes="96x96" href="assets/img/favicon-96x96.png">
+    <link href="assets/img/apple-icon-180x180.png" rel="apple-touch-icon">
 
     <meta name="title" content="Collaborative Research: Workshop to Develop a Roadmap for Greater Public Use of Privacy-Sensitive Government Datas @ MIT">
     <meta name="description"
@@ -101,8 +101,8 @@
   <!-- ======= Intro Section ======= -->
   <section id="intro">
     <div class="intro-container" data-aos-delay="100">
-      <p id="sub-heading" class="mb-4 pb-0">A Workshop to Develop a Roadmap for Greater Public <br>
-        Use of Privacy-Sensitive Government Data</p>
+      <h1 class="mb-2 pb-0"><span style="color: #A31F34">Joint NSF-NIST Workshop</span></h1>
+      <p id="sub-heading" class="mb-4 pb-0">To Develop a Roadmap for Greater Public Use of Privacy-Sensitive Government Data</p>
       <!-- <div>
         <a href="https://github.com/Path-Check/vaccine-diary" class="about-btn-2 scrollto">Research</a>
         <a href="./events.html" class="about-btn-2">Events</a>
@@ -254,7 +254,7 @@
           <div class="section-header">
             <h2 style="color: #191919">Organizers</h2>
           </div>
-          <div class="row justify-content-center speaker-row">
+          <div class="row justify-content-center speaker-row" style="margin:auto">
             <div class="col-lg-3 col-md-6 col-sm-6" style="width: 85%">
               <a href="https://www.cs.purdue.edu/homes/clifton/">
                 <div class="speaker2">
@@ -299,11 +299,33 @@
                 </div>
               </a>
             </div>
+            <div class="col-lg-3 col-md-6 col-sm-6" style="width:85%">
+              <a href="https://schmidtfutures.com/international-strategy-forum/class-of-2021/">
+                <div class="speaker">
+                  <img src="assets/img/speakers/tess_deblanc-knowles.jpg" alt="Tess deBlanc-Knowles" style="width: 100%;">
+                  <div class="details">
+                    <h3>Tess DeBlanc-Knowles</h3>
+                    <p>Office of Science and Technology Policy, The White House </p>
+                  </div>
+                </div>
+              </a>
+            </div>
+            <div class="col-lg-3 col-md-6 col-sm-6" style="width:85%">
+              <a href="https://www.nist.gov/blogs/cybersecurity-insights/authors/naomi-lefkovitz">
+                <div class="speaker">
+                  <img src="assets/img/speakers/naomi_lefkovitz.jpg" alt="Naomi Lefkovitz" style="width: 100%;">
+                  <div class="details">
+                    <h3>Naomi Lefkovitz</h3>
+                    <p>National Institute of Standards and Technology, U.S. Department of Commerce</p>
+                  </div>
+                </div>
+              </a>
+            </div>
           </div>
           <div class="section-header">
             <h2 style="color: #191919">Speakers</h2>
           </div>
-            <div class="row justify-content-center speaker-row">
+            <div class="row justify-content-center speaker-row" style="margin:auto">
               <div class="col-lg-3 col-md-6 col-sm-6" style="width: 85%">
                 <a href="https://www.nsf.gov/cise/bios/egiancha.jsp">
                   <div class="speaker2">
@@ -585,7 +607,7 @@
       
         <!-- End Schdule Day 2 -->
         <center>
-          <h5 id="dec-conf" style="font-weight: 800; font-family: Arial, Helvetica, sans-serif; color:#2b2b2b">May 22, 2021</h5>
+          <h5 id="dec-conf" style="font-weight: 800; font-family: Arial, Helvetica, sans-serif; color:#2b2b2b">May 26, 2021</h5>
         </center>
         <div class="tab-content row justify-content-center">
           <!-- Schdule Day 2  -->
