--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
       <div id="logo" class="pull-left">
         <!-- Uncomment below if you prefer to use a text logo -->
         <!-- <h1><a href="#intro"><span></span></a></h1> -->
-        <a href="index.html" class="scrollto"><img src="assets/img/nsf.png" alt="NSF" title=""></a>
+        <a href="index.html" class="scrollto"><img src="assets/img/nistnsf.png" alt="NSF" title=""></a>
       </div>
 
       <nav id="nav-menu-container">
@@ -700,11 +700,11 @@
 
       <div class="copyright">
         Contact: <a href="mailto:privatekit@media.mit.edu"
-          style="color: white; text-decoration: underline;">privatekit@media.mit.edu</a><br><br>
-      <br><br>
-      <strong>This event is supported by the National Science Foundation</strong>
+          style="color: white; text-decoration: underline;">privatekit@media.mit.edu</a>
+      <br>
+      <strong>This event is supported by the National Science Foundation (NSF) and the National Institute of Standards and Technology (NIST)</strong>
         <!-- &copy; Copyright <strong>Trusted Pandemic Technologies</strong>. All Rights Reserved. -->
-      </div>
+      </div><br>
       <div class="credits">
         <!--
         All the links in the footer should remain intact.
