--- a/index.html
+++ b/index.html
@@ -471,7 +471,7 @@
     <div class="container">
       <div class="section-header">
         <h2 style="color: #191919">Agenda</h2>
-        <p>All times are listed in Eastern Standard Time (EST)</p>
+        <p>All times are listed in Eastern Daylight Savings Time (EDT)</p>
       </div>
       <center>
         <h5 id="dec-conf" style="font-weight: 800; font-family: Arial, Helvetica, sans-serif; color:#2b2b2b">May 21, 2021</h5>
