--- a/index.html
+++ b/index.html
@@ -459,6 +459,39 @@
                   </div>
                 </a>
               </div>
+              <div class="col-lg-3 col-md-6 col-sm-6" style="width:85%">
+                <a href="https://www.linkedin.com/in/danbogdanov/">
+                  <div class="speaker">
+                    <img src="assets/img/speakers/dan_bogdanov.png" alt="Dan Bogdanov" style="width: 100%;">
+                    <div class="details">
+                      <h3>Dan Bogdanov</h3>
+                      <p>Cybernetica</p>
+                    </div>
+                  </div>
+                </a>
+              </div>
+              <div class="col-lg-3 col-md-6 col-sm-6" style="width:85%">
+                <a href="https://www.nist.gov/people/ellen-m-voorhees">
+                  <div class="speaker">
+                    <img src="assets/img/speakers/ellen_voorhees.jpg" alt="Ellen Voorhees" style="width: 100%;">
+                    <div class="details">
+                      <h3>Ellen Voorhees</h3>
+                      <p>NIST</p>
+                    </div>
+                  </div>
+                </a>
+              </div>
+              <div class="col-lg-3 col-md-6 col-sm-6" style="width:85%">
+                <a href="https://www.nsf.gov/cise/bios/martonosi.jsp">
+                  <div class="speaker">
+                    <img src="assets/img/speakers/margaret_martonomsi.jpg" alt="Margaret Martonomsi" style="width: 100%;">
+                    <div class="details">
+                      <h3>Margaret Martonomsi</h3>
+                      <p>NSF</p>
+                    </div>
+                  </div>
+                </a>
+              </div>
             </div>
           </div>
         </div>
@@ -490,16 +523,7 @@
             </div>
           </div>
           <div class="row agenda-item">
-            <div class="col-md-3">11:30am - 1:00pm</div>
-            <!-- <div class="col-md-2"><a href="https://youtu.be/OrVd8Z_P2So" class="about-btn">&nbsp;Watch&nbsp;</a></div> -->
-            <div class="col-md-9">
-              <h4>Case Study: Census Bureau</h4>
-              <p></p>
-            </div>
-          </div>
-          <div class="row agenda-item">
-            <div class="col-md-3"></div>
-            <!-- <div class="col-md-2"><a href="https://youtu.be/OrVd8Z_P2So" class="about-btn">&nbsp;Watch&nbsp;</a></div> -->
+            <div class="col-md-3">11:30am - 12:00pm</div>
             <div class="col-md-9">
               <h4>	
                 Keynote: Confidentiality-Utility Tradeoffs and Stakeholder Communication</h4>
@@ -507,8 +531,7 @@
             </div>
           </div>
           <div class="row agenda-item">
-            <div class="col-md-3"></div>
-            <!-- <div class="col-md-2"><a href="https://youtu.be/OrVd8Z_P2So" class="about-btn">&nbsp;Watch&nbsp;</a></div> -->
+            <div class="col-md-3">12:00pm - 12:30pm</div>
             <div class="col-md-9">
               <h4>	
                 Differential Privacy in Practice</h4>
@@ -516,32 +539,35 @@
             </div>
           </div>
           <div class="row agenda-item">
-            <div class="col-md-3"></div>
-            <!-- <div class="col-md-2"><a href="https://youtu.be/OrVd8Z_P2So" class="about-btn">&nbsp;Watch&nbsp;</a></div> -->
+            <div class="col-md-3">12:30pm - 1:00pm</div>
             <div class="col-md-9">
               <h4>Risk Management</h4>
               <p>John Eltinge, U.S. Census Bureau</p>
             </div>
           </div>
           <div class="row agenda-item">
-            <div class="col-md-3">1:00 - 1:45</div>
-            <!-- <div class="col-md-2"><a href="https://youtu.be/OrVd8Z_P2So" class="about-btn">&nbsp;Watch&nbsp;</a></div> -->
+            <div class="col-md-3">1:00pm - 1:15pm</div>
             <div class="col-md-9">
               <h4>Break</h4>
               <p></p>
             </div>
           </div>
           <div class="row agenda-item">
-            <div class="col-md-3">1:45 - 2:15</div>
-            <!-- <div class="col-md-2"><a href="https://youtu.be/OrVd8Z_P2So" class="about-btn">&nbsp;Watch&nbsp;</a></div> -->
+            <div class="col-md-3">1:15pm - 1:45pm</div>
+            <div class="col-md-9">
+              <h4>Country-scale deployments of cryptographic security and privacy technologies</h4>
+              <p>Dan Bogdanov, Cybernetica</p>
+            </div>
+          </div>
+          <div class="row agenda-item">
+            <div class="col-md-3">1:45pm - 2:15pm</div>
             <div class="col-md-9">
               <h4>The Perspective of the Chief Data Officer</h4>
               <p>Dan Morgan, Department of Transportation</p>
             </div>
           </div>
           <div class="row agenda-item">
-            <div class="col-md-3">1:45 - 2:15</div>
-            <!-- <div class="col-md-2"><a href="https://youtu.be/OrVd8Z_P2So" class="about-btn">&nbsp;Watch&nbsp;</a></div> -->
+            <div class="col-md-3">2:15pm - 2:45pm</div>
             <div class="col-md-9">
               <h4>COVID-19 Case Data Publication</h4>
               <p>	
@@ -549,32 +575,28 @@
             </div>
           </div>
           <div class="row agenda-item">
-            <div class="col-md-3">2:45 - 3:15</div>
-            <!-- <div class="col-md-2"><a href="https://youtu.be/OrVd8Z_P2So" class="about-btn">&nbsp;Watch&nbsp;</a></div> -->
+            <div class="col-md-3">2:45pm - 3:15pm</div>
             <div class="col-md-9">
               <h4>Synthetic Data Generation</h4>
               <p>Jerry Reiter, Duke University</p>
             </div>
           </div>
           <div class="row agenda-item">
-            <div class="col-md-3">3:15 - 3:30</div>
-            <!-- <div class="col-md-2"><a href="https://youtu.be/OrVd8Z_P2So" class="about-btn">&nbsp;Watch&nbsp;</a></div> -->
+            <div class="col-md-3">3:15pm - 3:30pm</div>
             <div class="col-md-9">
               <h4>Break</h4>
               <p></p>
             </div>
           </div>
           <div class="row agenda-item">
-            <div class="col-md-3">3:30 - 4:30</div>
-            <!-- <div class="col-md-2"><a href="https://youtu.be/OrVd8Z_P2So" class="about-btn">&nbsp;Watch&nbsp;</a></div> -->
+            <div class="col-md-3">3:30pm - 3:50pm</div>
             <div class="col-md-9">
               <h4>Secure Multiparty Computation in the Boston Women's Workforce Network</h4>
               <p>Mayank Varia, Boston University</p>
             </div>
           </div>
           <div class="row agenda-item">
-            <div class="col-md-3"></div>
-            <!-- <div class="col-md-2"><a href="https://youtu.be/OrVd8Z_P2So" class="about-btn">&nbsp;Watch&nbsp;</a></div> -->
+            <div class="col-md-3">3:50pm - 4:10pm</div>
             <div class="col-md-9">
               <h4>Multi-tier Access and Data User Needs</h4>
               <p>
@@ -583,8 +605,7 @@
             </div>
           </div>
           <div class="row agenda-item">
-            <div class="col-md-3"></div>
-            <!-- <div class="col-md-2"><a href="https://youtu.be/OrVd8Z_P2So" class="about-btn">&nbsp;Watch&nbsp;</a></div> -->
+            <div class="col-md-3">4:10pm - 4:30pm</div>
             <div class="col-md-9">
               <h4>	
                 Adversarial Modeling</h4>
@@ -593,13 +614,19 @@
             </div>
           </div>
           <div class="row agenda-item">
-            <div class="col-md-3">4:30 - 5:00</div>
-            <!-- <div class="col-md-2"><a href="https://youtu.be/OrVd8Z_P2So" class="about-btn">&nbsp;Watch&nbsp;</a></div> -->
+            <div class="col-md-3">4:30pm - 4:50pm</div>
             <div class="col-md-9">
               <h4>	
-                The NIST Perspective</h4>
+                The TREC Datasets</h4>
               <p>	
-                To be determined</p>
+                Ellen Voorhees, NIST</p>
+            </div>
+          </div>
+          <div class="row agenda-item">
+            <div class="col-md-3">4:50pm - 5:00pm</div>
+            <div class="col-md-9">
+              <h4>	
+                Discussion and Planning for Day 2</h4>
             </div>
           </div>
         </div>
@@ -618,7 +645,7 @@
               <div class="col-md-9">
                 <h4>Opening Remarks</h4>
                 <p>	
-                  Elham Tabassi & the Organizers</p>
+                  Elham Tabassi, Margaret Martonomsi, & the Organizers</p>
               </div>
             </div>
             <div class="row agenda-item">
