--- a/index.html
+++ b/index.html
@@ -237,10 +237,7 @@
           </ul>
           <p style="color: #191919">
             The next wave of privacy technology research needs to focus on the real-world challenges that
-            are not yet addressed by the technology. In many cases, the data agencies would like to share is
-            highly complex, with hundreds/thousands of variables of different types, and complex survey design
-            that makes it to apply emerging technologies. This workshop aims to identify key cross-cutting
-            challenges, and spur research to address them.
+            are not yet addressed by the technology. In many cases, the data agencies would like to share highly complex data sets, for example, survey data with hundreds/thousands of variables of different types and complex survey design that makes it very challenging to apply emerging technologies. This workshop aims to identify key cross-cutting challenges and spur research to address them.
           </p>
         </div>
       </div>
@@ -541,7 +538,8 @@
           <div class="row agenda-item">
             <div class="col-md-3">12:30pm - 1:00pm</div>
             <div class="col-md-9">
-              <h4>Risk Management</h4>
+              <h4>Some Elements of the Interface of Privacy Protection with Data Quality,
+                Risk and Cost</h4>
               <p>John Eltinge, U.S. Census Bureau</p>
             </div>
           </div>
