--- a/index.html
+++ b/index.html
@@ -643,7 +643,11 @@
               <div class="col-md-9">
                 <h4>Opening Remarks</h4>
                 <p>	
-                  Elham Tabassi, Margaret Martonomsi, & the Organizers</p>
+                  Margaret Martonosi, National Science Foundation,<br>
+
+Elham Tabassi, National Institute of Standards and Technology, &<br>
+
+Organizers</p>
               </div>
             </div>
             <div class="row agenda-item">
