--- a/index.html
+++ b/index.html
@@ -297,6 +297,17 @@
               </a>
             </div>
             <div class="col-lg-3 col-md-6 col-sm-6" style="width:85%">
+              <a href="https://www.linkedin.com/in/vivoutlaw/">
+                <div class="speaker">
+                  <img src="assets/img/speakers/vivek.jpg" alt="Vivek Sharma" style="width: 100%;">
+                  <div class="details">
+                    <h3>Vivek Sharma</h3>
+                    <p>MIT Media Lab</p>
+                  </div>
+                </div>
+              </a>
+            </div>
+            <div class="col-lg-3 col-md-6 col-sm-6" style="width:85%">
               <a href="https://schmidtfutures.com/international-strategy-forum/class-of-2021/">
                 <div class="speaker">
                   <img src="assets/img/speakers/tess_deblanc-knowles.jpg" alt="Tess deBlanc-Knowles" style="width: 100%;">
