--- a/index.html
+++ b/index.html
@@ -297,7 +297,7 @@
               </a>
             </div>
             <div class="col-lg-3 col-md-6 col-sm-6" style="width:85%">
-              <a href="https://www.linkedin.com/in/vivoutlaw/">
+              <a href="https://vivoutlaw.github.io/">
                 <div class="speaker">
                   <img src="assets/img/speakers/vivek.jpg" alt="Vivek Sharma" style="width: 100%;">
                   <div class="details">
