--- a/index.html
+++ b/index.html
@@ -742,7 +742,7 @@ Organizers</p>
         Contact: <a href="mailto:privatekit@media.mit.edu"
           style="color: white; text-decoration: underline;">privatekit@media.mit.edu</a>
       <br>
-      <strong>This event is supported by the National Science Foundation (NSF) and the National Institute of Standards and Technology (NIST)</strong>
+      <strong>This event is supported by the National Science Foundation (NSF) and National Institute ofStandards and Technologies (NIST), and the White House Office of Science and Technology Policy.</strong>
         <!-- &copy; Copyright <strong>Trusted Pandemic Technologies</strong>. All Rights Reserved. -->
       </div><br>
       <div class="credits">
